@@ -2,7 +2,9 @@
 
         * src/Timer.cpp: implementation of Timer
         * include/Rcpp/Benchmark/Timer.h: internal performance timer, based on
-        the code from the microbenchmark package. 
+        the code from the microbenchmark package
+        * include/Rcpp/api/meat/Matrix.h: move more in Matrix meat
+        * src/Date.cpp: import the code from posixt.cpp
 
 2012-12-07  JJ Allaire <jj@rstudio.org>
 
